fix bugs many bugs